@@ -11,7 +11,7 @@
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.release>21</maven.compiler.release>
+        <maven.compiler.release>11</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- Добавлено имя свойства -->
         <name>PropertyValue</name>
@@ -80,7 +80,7 @@
                 <configuration>
                     <source>11</source>
                     <target>11</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+    <!--                <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
                 </configuration>
             </plugin>
         </plugins>
